--- a/Libropouch/Lang/Lang.resx
+++ b/Libropouch/Lang/Lang.resx
@@ -141,6 +141,30 @@
   <data name="DiscardBook" xml:space="preserve">
     <value>Discard book?</value>
   </data>
+  <data name="EditBookAuthor" xml:space="preserve">
+    <value>_Author:</value>
+  </data>
+  <data name="EditBookCategory" xml:space="preserve">
+    <value>_Category:</value>
+  </data>
+  <data name="EditBookFavorite" xml:space="preserve">
+    <value>_Favorite:</value>
+  </data>
+  <data name="EditBookLanguage" xml:space="preserve">
+    <value>_Language:</value>
+  </data>
+  <data name="EditBookPublished" xml:space="preserve">
+    <value>_Published:</value>
+  </data>
+  <data name="EditBookSeries" xml:space="preserve">
+    <value>S_eries:</value>
+  </data>
+  <data name="EditBookSync" xml:space="preserve">
+    <value>_Sync:</value>
+  </data>
+  <data name="EditBookTitle" xml:space="preserve">
+    <value>_Title:</value>
+  </data>
   <data name="EpubCorrupted" xml:space="preserve">
     <value>I wasn't ale to get any information from the Epub file, it may be corrupted or is missing some key files.</value>
   </data>
@@ -150,8 +174,56 @@
   <data name="ExthProblemFetching" xml:space="preserve">
     <value>I encountered some problems with fetching the EXTH header in {0}: {1}</value>
   </data>
+  <data name="HintBookGridFavorite" xml:space="preserve">
+    <value>Toggle to mark this book as one of your favorites.</value>
+  </data>
+  <data name="HintBookGridSync" xml:space="preserve">
+    <value>Toggle to decide if you want to sync this book to your reader or not.</value>
+  </data>
+  <data name="HintMenuAbout" xml:space="preserve">
+    <value>About</value>
+  </data>
+  <data name="HintMenuAdd" xml:space="preserve">
+    <value>Add new books into the library</value>
+  </data>
+  <data name="HintMenuSettings" xml:space="preserve">
+    <value>Settings</value>
+  </data>
+  <data name="HintMenuSync" xml:space="preserve">
+    <value>Synchronize files on the connected ebook reader with local Libropouch library</value>
+  </data>
   <data name="MobiHeaderMissing" xml:space="preserve">
     <value>{0} is missing the MOBI header and therefore I am not able to extract any information from it.</value>
+  </data>
+  <data name="SettingsAutosync" xml:space="preserve">
+    <value>_AutoSync:</value>
+  </data>
+  <data name="SettingsBookDir" xml:space="preserve">
+    <value>_Book directory:</value>
+  </data>
+  <data name="SettingsDebug" xml:space="preserve">
+    <value>_Debug:</value>
+  </data>
+  <data name="SettingsLanguage" xml:space="preserve">
+    <value>_Language:</value>
+  </data>
+  <data name="SettingsModel" xml:space="preserve">
+    <value>_Model:</value>
+  </data>
+  <data name="SettingsPnp" xml:space="preserve">
+    <value>_PnP ID:</value>
+  </data>
+  <data name="SettingsReader" xml:space="preserve">
+    <value>_Reader:</value>
+  </data>
+  <data name="SettingsReaderCustomHint" xml:space="preserve">
+    <value>What is this?</value>
+  </data>
+  <data name="SettingsSplashScreen" xml:space="preserve">
+    <value>_Splashscreen:</value>
+  </data>
+  <data name="SettingsTray" xml:space="preserve">
+    <value>Close into _tray:</value>
   </data>
   <data name="SyncAddingBooks" xml:space="preserve">
     <value>Adding new books...</value>
