--- a/Libropouch/Lang/Lang.resx
+++ b/Libropouch/Lang/Lang.resx
@@ -173,12 +173,25 @@
   </data>
   <data name="ExthProblemFetching" xml:space="preserve">
     <value>I encountered some problems with fetching the EXTH header in {0}: {1}</value>
+    <comment>{0} - File name, {1} - Error description</comment>
   </data>
   <data name="HintBookGridFavorite" xml:space="preserve">
     <value>Toggle to mark this book as one of your favorites.</value>
   </data>
   <data name="HintBookGridSync" xml:space="preserve">
     <value>Toggle to decide if you want to sync this book to your reader or not.</value>
+  </data>
+  <data name="HintEditBookCoverImage" xml:space="preserve">
+    <value>Cover image for this book. You can select another image by clicking on this picture, or remove the existing image by right clicking on it.</value>
+  </data>
+  <data name="HintEditBookFavorite" xml:space="preserve">
+    <value>Mark this book as one of your favorites</value>
+  </data>
+  <data name="HintEditBookRemove" xml:space="preserve">
+    <value>Remove this book from the library</value>
+  </data>
+  <data name="HintEditBookSync" xml:space="preserve">
+    <value>This book will by copied into your reader during synchronization</value>
   </data>
   <data name="HintMenuAbout" xml:space="preserve">
     <value>About</value>
@@ -191,6 +204,30 @@
   </data>
   <data name="HintMenuSync" xml:space="preserve">
     <value>Synchronize files on the connected ebook reader with local Libropouch library</value>
+  </data>
+  <data name="HintSettingsAutosync" xml:space="preserve">
+    <value>Automatically start sync, when compatible reader is connected to the computer</value>
+  </data>
+  <data name="HintSettingsDebug" xml:space="preserve">
+    <value>Debug console displays runtime information about this application, this information will be probably of no use to you as an user.</value>
+  </data>
+  <data name="HintSettingsDir" xml:space="preserve">
+    <value>Directory on the device, where all the books are stored. This is the directory which Libropouch will use, while working with the device.</value>
+  </data>
+  <data name="HintSettingsModel" xml:space="preserve">
+    <value>Model name of the reader device, usually identical to the marketing name of the reader. (For example: kindle's model name is kindle)</value>
+  </data>
+  <data name="HintSettingsPnp" xml:space="preserve">
+    <value>Device's Plug and play ID. Usually identical to the model name. But it can differ.</value>
+  </data>
+  <data name="HintSettingsReader" xml:space="preserve">
+    <value>Select the reader with which you are going to be using the Libropouch</value>
+  </data>
+  <data name="HintSettingsSplashscreen" xml:space="preserve">
+    <value>Show splashscreen while the application loads</value>
+  </data>
+  <data name="HintSettingsTray" xml:space="preserve">
+    <value>Closing this application causes it to minimize itself into the system tray instead. (AutoSync will be still working this way)</value>
   </data>
   <data name="MobiHeaderMissing" xml:space="preserve">
     <value>{0} is missing the MOBI header and therefore I am not able to extract any information from it.</value>
@@ -238,7 +275,7 @@
     <value>Synchronization was successfully finished.</value>
   </data>
   <data name="SyncNoBooks" xml:space="preserve">
-    <value>No books found on the reader.</value>
+    <value>No books found in the reader.</value>
   </data>
   <data name="SyncNoReadersFound" xml:space="preserve">
     <value>I wasn't able to find any connected readers.</value>
