--- a/Libropouch/Lang/Lang.resx
+++ b/Libropouch/Lang/Lang.resx
@@ -147,6 +147,9 @@
   <data name="EditBookCategory" xml:space="preserve">
     <value>_Category:</value>
   </data>
+  <data name="EditBookDiscard" xml:space="preserve">
+    <value>Discard</value>
+  </data>
   <data name="EditBookFavorite" xml:space="preserve">
     <value>_Favorite:</value>
   </data>
@@ -237,6 +240,9 @@
   </data>
   <data name="SettingsBookDir" xml:space="preserve">
     <value>_Book directory:</value>
+  </data>
+  <data name="SettingsConsole" xml:space="preserve">
+    <value>Show console</value>
   </data>
   <data name="SettingsDebug" xml:space="preserve">
     <value>_Debug:</value>
