--- a/Libropouch/Lang/Lang.resx
+++ b/Libropouch/Lang/Lang.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BookGridClearFilter" xml:space="preserve">
+    <value>Clear filter</value>
+  </data>
   <data name="BookGridEdit" xml:space="preserve">
     <value>Edit</value>
   </data>
@@ -131,6 +134,9 @@
   </data>
   <data name="BookGridHeaderTitle" xml:space="preserve">
     <value>Title</value>
+  </data>
+  <data name="BookGridSeries" xml:space="preserve">
+    <value>Series</value>
   </data>
   <data name="DeleteBooksConfirm" xml:space="preserve">
     <value>Do you really want to permanently delete {0} book/s?</value>
