--- a/Libropouch/Lang/Lang.resx
+++ b/Libropouch/Lang/Lang.resx
@@ -184,6 +184,9 @@
     <value>I encountered some problems with fetching the EXTH header in {0}: {1}</value>
     <comment>{0} - File name, {1} - Error description</comment>
   </data>
+  <data name="HintAutoStart" xml:space="preserve">
+    <value>Automatically start Libropouch during the computer boot and minimize it into tray</value>
+  </data>
   <data name="HintBookGridFavorite" xml:space="preserve">
     <value>Toggle to mark this book as one of your favorites.</value>
   </data>
@@ -214,6 +217,9 @@
   <data name="HintMenuSync" xml:space="preserve">
     <value>Synchronize files on the connected ebook reader with local Libropouch library</value>
   </data>
+  <data name="HintOnlyOne" xml:space="preserve">
+    <value>Only allow one instance of Libropouch to run at the same time</value>
+  </data>
   <data name="HintSettingsAutosync" xml:space="preserve">
     <value>Automatically start sync, when compatible reader is connected to the computer</value>
   </data>
@@ -241,6 +247,9 @@
   <data name="MobiHeaderMissing" xml:space="preserve">
     <value>{0} is missing the MOBI header and therefore I am not able to extract any information from it.</value>
   </data>
+  <data name="SettingsAutoStart" xml:space="preserve">
+    <value>Aut_o start:</value>
+  </data>
   <data name="SettingsAutosync" xml:space="preserve">
     <value>_AutoSync:</value>
   </data>
@@ -258,6 +267,9 @@
   </data>
   <data name="SettingsModel" xml:space="preserve">
     <value>_Model:</value>
+  </data>
+  <data name="SettingsOnlyOne" xml:space="preserve">
+    <value>One _instance:</value>
   </data>
   <data name="SettingsPnp" xml:space="preserve">
     <value>_PnP ID:</value>
