--- a/Bookpouch/Lang/Lang.cs-CZ.resx
+++ b/Bookpouch/Lang/Lang.cs-CZ.resx
@@ -138,6 +138,12 @@
   <data name="BookGridSeries" xml:space="preserve">
     <value>Série</value>
   </data>
+  <data name="BookInfoFileNotFound" xml:space="preserve">
+    <value>Nepodařilo se mi nalézt info soubor asociovaný s touto knihou. Možná jste ho omylem smazali? Obnovím teď seznam knih, což by mělo onen chybějící soubor zregenerovat.</value>
+  </data>
+  <data name="BookInfoFileRegenFail" xml:space="preserve">
+    <value>Pokus obnovit info soubor pro tuto knihu se z neznámého důvodu nezdařil. Omlouvám se.</value>
+  </data>
   <data name="DeleteBooksConfirm" xml:space="preserve">
     <value>Opravdu chcete nenávratně smazat {0} knížek?</value>
   </data>
