--- a/Bookpouch/Lang/Lang.resx
+++ b/Bookpouch/Lang/Lang.resx
@@ -138,6 +138,12 @@
   <data name="BookGridSeries" xml:space="preserve">
     <value>Series</value>
   </data>
+  <data name="BookInfoFileNotFound" xml:space="preserve">
+    <value>I wasn't able to find the info file associated with this book. Have you perhaps accidentally deleted it?  I will now trigger book list reload, which should regenerate the missing info file.</value>
+  </data>
+  <data name="BookInfoFileRegenFail" xml:space="preserve">
+    <value>Attempt to regenerate the info file failed for an unknown reason, sorry.</value>
+  </data>
   <data name="DeleteBooksConfirm" xml:space="preserve">
     <value>Do you really want to permanently delete {0} book/s?</value>
   </data>
