--- a/Bookpouch/Lang/Lang.resx
+++ b/Bookpouch/Lang/Lang.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BookDeleteConfirm" xml:space="preserve">
+    <value>Do you really want to permanently delete {0}?</value>
+  </data>
+  <data name="BookDeleteConfirmTitle" xml:space="preserve">
+    <value>Delete book?</value>
+  </data>
   <data name="BookGridClearFilter" xml:space="preserve">
     <value>Clear filter</value>
   </data>
@@ -143,6 +149,9 @@
   </data>
   <data name="BookInfoFileRegenFail" xml:space="preserve">
     <value>Attempt to regenerate the info file failed for an unknown reason, sorry.</value>
+  </data>
+  <data name="BookInfoSaveError" xml:space="preserve">
+    <value>I wasn't able to save the supplied value into the book's info file.</value>
   </data>
   <data name="DeleteBooksConfirm" xml:space="preserve">
     <value>Do you really want to permanently delete {0} book/s?</value>
@@ -219,6 +228,9 @@
   </data>
   <data name="HintMenuAdd" xml:space="preserve">
     <value>Add new books into the library</value>
+  </data>
+  <data name="HintMenuRegenerateTree" xml:space="preserve">
+    <value>Re-generate the book file tree. (Use this, if you manually manipulated with folders included in the library)</value>
   </data>
   <data name="HintMenuSettings" xml:space="preserve">
     <value>Settings</value>
