--- a/Bookpouch/Lang/Lang.resx
+++ b/Bookpouch/Lang/Lang.resx
@@ -153,6 +153,9 @@
   <data name="BookInfoSaveError" xml:space="preserve">
     <value>I wasn't able to save the supplied value into the book's info file.</value>
   </data>
+  <data name="DatFileNotAvailable" xml:space="preserve">
+    <value>I was not able to access the .dat file associated with the {0} book.</value>
+  </data>
   <data name="DeleteBooksConfirm" xml:space="preserve">
     <value>Do you really want to permanently delete {0} book/s?</value>
   </data>
