--- a/Bookpouch/Lang/Lang.resx
+++ b/Bookpouch/Lang/Lang.resx
@@ -159,6 +159,9 @@
   <data name="DeleteBooksConfirm" xml:space="preserve">
     <value>Do you really want to permanently delete {0} book/s?</value>
   </data>
+  <data name="DirAccessDenied" xml:space="preserve">
+    <value>I do not have write access to this folder.</value>
+  </data>
   <data name="DirNotFound" xml:space="preserve">
     <value>I wasn't able to find the specified directory ({0}) for storing books.</value>
   </data>
@@ -247,6 +250,9 @@
   <data name="HintSettingsAutosync" xml:space="preserve">
     <value>Automatically start sync, when compatible reader is connected to the computer</value>
   </data>
+  <data name="HintSettingsBooksDir" xml:space="preserve">
+    <value>Directory in which Bookpouch searches for book files to work with.</value>
+  </data>
   <data name="HintSettingsDebug" xml:space="preserve">
     <value>Debug console displays runtime information about this application, this information will be probably of no use to you as an user.</value>
   </data>
@@ -274,6 +280,9 @@
   <data name="RegeneratingBookFileTree" xml:space="preserve">
     <value>Regenerating the book tree...</value>
   </data>
+  <data name="SelectBookDirPrompt" xml:space="preserve">
+    <value>Please select the directory in which you keep your eBooks stored, or press cancel to stay with the current directory: {0}</value>
+  </data>
   <data name="SettingsAutoStart" xml:space="preserve">
     <value>Aut_o start:</value>
   </data>
@@ -282,6 +291,9 @@
   </data>
   <data name="SettingsBookDir" xml:space="preserve">
     <value>_Book directory:</value>
+  </data>
+  <data name="SettingsBooksDir" xml:space="preserve">
+    <value>Book _directory:</value>
   </data>
   <data name="SettingsConsole" xml:space="preserve">
     <value>Show console</value>
