--- a/Bookpouch/Lang/Lang.cs-CZ.resx
+++ b/Bookpouch/Lang/Lang.cs-CZ.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BookCopyError" xml:space="preserve">
+    <value>Vyskytl se problém při kopírování {0} do knihovny.</value>
+  </data>
   <data name="BookDeleteConfirm" xml:space="preserve">
     <value>Opravdu chcete nenávratně smazat {0}?</value>
   </data>
@@ -144,17 +147,11 @@
   <data name="BookGridSeries" xml:space="preserve">
     <value>Série</value>
   </data>
-  <data name="BookInfoFileNotFound" xml:space="preserve">
-    <value>Nepodařilo se mi nalézt info soubor asociovaný s touto knihou. Možná jste ho omylem smazali? Obnovím teď seznam knih, což by mělo onen chybějící soubor zregenerovat.</value>
-  </data>
-  <data name="BookInfoFileRegenFail" xml:space="preserve">
-    <value>Pokus obnovit info soubor pro tuto knihu se z neznámého důvodu nezdařil. Omlouvám se.</value>
+  <data name="BookInfoNotAvailable" xml:space="preserve">
+    <value>Nepodařilo se mi stáhnout data o knize z úložiště.</value>
   </data>
   <data name="BookInfoSaveError" xml:space="preserve">
     <value>Nepodařilo se mi uložit zadanou hodnotu do infosouboru o knize.</value>
-  </data>
-  <data name="DatFileNotAvailable" xml:space="preserve">
-    <value>Nepodařilo se mi otevřít .dat soubor asociovaný s knihou {0}</value>
   </data>
   <data name="DeleteBooksConfirm" xml:space="preserve">
     <value>Opravdu chcete nenávratně smazat {0} knížek?</value>
