--- a/Bookpouch/Lang/Lang.resx
+++ b/Bookpouch/Lang/Lang.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BookCopyError" xml:space="preserve">
+    <value>There was a problem with copying {0} into the library.</value>
+  </data>
   <data name="BookDeleteConfirm" xml:space="preserve">
     <value>Do you really want to permanently delete {0}?</value>
   </data>
@@ -144,17 +147,11 @@
   <data name="BookGridSeries" xml:space="preserve">
     <value>Series</value>
   </data>
-  <data name="BookInfoFileNotFound" xml:space="preserve">
-    <value>I wasn't able to find the info file associated with this book. Have you perhaps accidentally deleted it?  I will now trigger book list reload, which should regenerate the missing info file.</value>
-  </data>
-  <data name="BookInfoFileRegenFail" xml:space="preserve">
-    <value>Attempt to regenerate the info file failed for an unknown reason, sorry.</value>
+  <data name="BookInfoNotAvailable" xml:space="preserve">
+    <value>I was not able to retrieve infomartion about the book from the storage.</value>
   </data>
   <data name="BookInfoSaveError" xml:space="preserve">
-    <value>I wasn't able to save the supplied value into the book's info file.</value>
-  </data>
-  <data name="DatFileNotAvailable" xml:space="preserve">
-    <value>I was not able to access the .dat file associated with the {0} book.</value>
+    <value>I wasn't able to save the supplied value about the book.</value>
   </data>
   <data name="DeleteBooksConfirm" xml:space="preserve">
     <value>Do you really want to permanently delete {0} book/s?</value>
