Vastly sped up the LibraryStructure.List() function

--- a/Bookpouch/Lang/Lang.cs-CZ.resx
+++ b/Bookpouch/Lang/Lang.cs-CZ.resx
@@ -352,4 +352,7 @@
   <data name="InfoQueueDeleted" xml:space="preserve">
     <value>Info fronta byla vymazána.</value>
   </data>
+  <data name="Working" xml:space="preserve">
+    <value>Pracuji...</value>
+  </data>
 </root>
