Added dir button to book details in the book grid, which will open the  folder containing the book file

--- a/Bookpouch/Lang/Lang.cs-CZ.resx
+++ b/Bookpouch/Lang/Lang.cs-CZ.resx
@@ -355,4 +355,7 @@
   <data name="SyncFileCopyFailed" xml:space="preserve">
     <value>Nepodařilo se mi synchronizovat {0}.</value>
   </data>
+  <data name="BookGridOpenDir" xml:space="preserve">
+    <value>Složka</value>
+  </data>
 </root>
