Added menu button to open  library's root directory

--- a/Bookpouch/Lang/Lang.cs-CZ.resx
+++ b/Bookpouch/Lang/Lang.cs-CZ.resx
@@ -358,4 +358,7 @@
   <data name="BookGridOpenDir" xml:space="preserve">
     <value>Složka</value>
   </data>
+  <data name="HintMenuRootDir" xml:space="preserve">
+    <value>Otevřít kořenovou složku knihovny</value>
+  </data>
 </root>
