Filter  search from the filter window now works with all provided fields

--- a/Bookpouch/Lang/Lang.cs-CZ.resx
+++ b/Bookpouch/Lang/Lang.cs-CZ.resx
@@ -132,19 +132,19 @@
   <data name="BookGridEdit" xml:space="preserve">
     <value>Upravit</value>
   </data>
-  <data name="BookGridHeaderCategory" xml:space="preserve">
+  <data name="FieldCategory" xml:space="preserve">
     <value>Kategorie</value>
   </data>
-  <data name="BookGridHeaderFavorite" xml:space="preserve">
+  <data name="FieldFavorite" xml:space="preserve">
     <value> ★</value>
   </data>
-  <data name="BookGridHeaderSync" xml:space="preserve">
+  <data name="FieldSync" xml:space="preserve">
     <value> ⇪</value>
   </data>
-  <data name="BookGridHeaderTitle" xml:space="preserve">
+  <data name="FieldTitle" xml:space="preserve">
     <value>Název</value>
   </data>
-  <data name="BookGridSeries" xml:space="preserve">
+  <data name="FieldSeries" xml:space="preserve">
     <value>Série</value>
   </data>
   <data name="BookInfoNotAvailable" xml:space="preserve">
@@ -376,11 +376,8 @@
   <data name="SettingsOnlyManualCategories" xml:space="preserve">
     <value>Ruční _kategorie.:</value>
   </data>
-  <data name="BookGridHeaderAuthor" xml:space="preserve">
+  <data name="FieldAuthor" xml:space="preserve">
     <value>Autor</value>
-  </data>
-  <data name="BookGridHeaderSeries" xml:space="preserve">
-    <value>Série</value>
   </data>
   <data name="EditBookCreated" xml:space="preserve">
     <value>_Vytvořeno:</value>
@@ -402,5 +399,23 @@
   </data>
   <data name="SettingsDescriptionMaxLength" xml:space="preserve">
     <value>Max délka pop..:</value>
+  </data>
+  <data name="FieldCreated" xml:space="preserve">
+    <value>Vytvořeno</value>
+  </data>
+  <data name="FieldDescription" xml:space="preserve">
+    <value>Popis</value>
+  </data>
+  <data name="FieldLanguage" xml:space="preserve">
+    <value>Jazyk</value>
+  </data>
+  <data name="FieldPath" xml:space="preserve">
+    <value>Cesta</value>
+  </data>
+  <data name="FieldPublished" xml:space="preserve">
+    <value>Publikováno</value>
+  </data>
+  <data name="FieldPublisher" xml:space="preserve">
+    <value>Vydavatel</value>
   </data>
 </root>
