Filter presets are now displayed as buttons under the main menu. Left click activates the preset filter, right click removes the preset.

--- a/Bookpouch/Lang/Lang.cs-CZ.resx
+++ b/Bookpouch/Lang/Lang.cs-CZ.resx
@@ -436,4 +436,10 @@
   <data name="FilterSavingPresetSuccessful" xml:space="preserve">
     <value>Předvolba filtru byla úspěšně uložena.</value>
   </data>
+  <data name="DiscardFilterPreset" xml:space="preserve">
+    <value>Smazat předvolbu</value>
+  </data>
+  <data name="DiscardFilterPresetConfirm" xml:space="preserve">
+    <value>Opravdu chcete smazat předvolbu filtru {0}?</value>
+  </data>
 </root>
