Added empty language option for language comboboxes Removed unused imports Fixed infos displaying in default system language, when triggered from separate thread Merged SQL code for database structure creation into one query

--- a/Bookpouch/Lang/Lang.cs-CZ.resx
+++ b/Bookpouch/Lang/Lang.cs-CZ.resx
@@ -449,6 +449,6 @@
     <value>Odebrat aktivní filtr.</value>
   </data>
   <data name="HintDateRange" xml:space="preserve">
-    <value>Filtrované datum je:: rovno (=), větší než (&gt;), nebo menší než (&lt;) vybrané datum.</value>
+    <value>Filtrované datum je: rovno (=), větší než (&gt;), nebo menší než (&lt;) vybrané datum.</value>
   </data>
 </root>
